# VerifiRWA

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
contracts/oracle_receiver/: Cargo.toml
contracts/oracle_receiver/src/: lib.rs
contracts/rwa_registry/: Cargo.toml
contracts/rwa_registry/src/: lib.rs
docs/: getting-started.md  security.md
sdk/typescript/: package.json  tsconfig.json
sdk/typescript/src/: index.ts  types.ts  utils.ts
tests/integration/: full_lifecycle_test.rs
